--- a/lectures/lecture-20.html
+++ b/lectures/lecture-20.html
@@ -47,10 +47,10 @@
     
     <h3>During Lecture</h3>
 
-    <p>The first part of this lecture does not use a starter file. For
-      the second part of the lecture the starter file is:</p>
-    
+    <p>The starters for this lecture are:</p>
+
     <ul>
+      <li><a href="m10-tr-trees-2-starter.rkt">m10-tr-trees-2.rkt</a></li>
       <li><a href="m11-maze-4-way-path-starter.rkt">m11-maze-4-way-path-starter.rkt</a></li>
     </ul>
 	
