missing close quote.

--- a/lectures/lecture-16.html
+++ b/lectures/lecture-16.html
@@ -64,7 +64,7 @@
       breaks big problems into a lot of much smaller problems. As just
       one example, when we are coding valid-next-positions, and we
       realize "ok, some of the positions are valid and I want to do just
-      those, then using what we know about templating we can very
+      those," then using what we know about templating we can very
       quickly write this:<p>
 
       <pre>
