Problem Bank is no longer on edX.

--- a/lectures/lecture-04.html
+++ b/lectures/lecture-04.html
@@ -51,7 +51,7 @@
 
     <p>If you have any concerns about that material work carefully
     through the relevant videos. You can also pick problems from the
-    Problem Bank tab in the edX course to practice. Or go to TA or
+    <a href="../bank/index.html">Problem Bank</a> to practice. Or go to TA or
       instructor office hours.</p>
 
     <h3>During Lecture</h3>
