update post-work advice in light of progression.

--- a/lectures/lecture-05.html
+++ b/lectures/lecture-05.html
@@ -110,7 +110,8 @@
     <h4>To Review</h4>
 
     <p>To practice what you learned today we suggest you finish up (or
-    rework!) the spider problem, starting from v2. When you are doing
+    rework!) the spider problem.  To finish up, start from v1, otherwise use
+    the first starter.  When you are doing
     tock spend a long time on the examples.  Use paper to work them
     out!  In the key handler pay particular attention to the
     template. Rather than templating it from Spider, we template it
