--- a/lectures/lecture-04.html
+++ b/lectures/lecture-04.html
@@ -151,7 +151,7 @@
       through the program through main function section, and then do that
       for the spider.</p>
     
-    <p>Next you cal improve the program to have the extra functionality
+    <p>Next you can improve the program to have the extra functionality
       described in the starter.  Do this by re-working the entire recipe
       starting from analysis for each new feature.  Do the practice problems
       as you feel you need to so that you have mastered module 3a.  It is
