solution file name was wrong.

--- a/lectures/lecture-20.html
+++ b/lectures/lecture-20.html
@@ -88,7 +88,7 @@
     <p>The solutions for today's lecture are:</p>
     
     <ul>
-      <li><a href="m10-tr-trees-2.rkt">m10-tr-trees-2.rkt</a></li>
+      <li><a href="m10-tr-trees-solution.rkt">m10-tr-trees-solution.rkt</a></li>
       <li><a href="m11-maze-4-way-path-solution.rkt">m11-maze-4-way-path-solution.rkt</a></li>
     </ul
           
