try-catch template, not backtracking template.

--- a/lectures/lecture-10.html
+++ b/lectures/lecture-10.html
@@ -83,7 +83,7 @@
       group the signature/purpose/examples/definitions differently. The
       rest was just HtDF!</p>
 
-    <p>We also learned the backtracking template, which gets added
+    <p>We also learned the try-catch template, which gets added
     into our type based templates to do a backtracking search over a
     tree. We will see this again and again as we go forward.</p>
 
